# eidos-marketplace

./: .gitignore  CONTRIBUTING.md  LEARNINGS.md  PHASES.md  README.md  STANDARD.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.eidos/ship/: manifest.toml
.github/workflows/: test-plugins.yml
AUDITS/: README.md  apple-a-day.md  browser-autonomy.md  canon.md  cartwright.md  cept.md  clawdflare.md  conduit.md  converge.md  eidos-mail.md  eidos-plugin-store.md  eidos-storemetheus.md  eidos.md  emux.md  felix.md  foreman.md  forge-forge.md  ike.md  kai.md  knox.md  lever.md  linearplus.md  medical-school.md  meeting2action.md  pavo.md  probe-forge.md  research-md.md  resume-resume.md  rhea.md  scridos.md  shipr.md  skillopt.md  visionlog.md  zoltar.md
plugins/apple-a-day/: .eidos-plugin.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
plugins/apple-a-day/.claude-plugin/: plugin.json
plugins/apple-a-day/.codex-plugin/: plugin.json
plugins/apple-a-day/apple_a_day/: __init__.py  app_similarity.py  browser.py  cli.py  config.py  context.py  ensemble_similarity.py  feature_extraction.py  format_ansi.py  format_rich.py  knowledge.py  launchd.py  log.py  models.py  profile.py  report.py  report_html.py  runner.py  schema.py  vitals.py
plugins/apple-a-day/apple_a_day/checks/: __init__.py  cleanup.py  cpu_load.py  crash_loops.py  disk_health.py  dylib_health.py  homebrew.py  kernel_panics.py  launch_agents.py  memory_pressure.py  network.py  security.py  shutdown_causes.py  thermal.py
plugins/apple-a-day/apple_a_day/templates/: report.html  script.js  style.css
plugins/apple-a-day/apple_a_day/templates/components/: actions.html  bluf.html  cleanup.html  criticals.html  header.html  hogs.html  info.html  matrix.html  pills.html  pressure.html  redundant.html  sparkline.html  sysinfo.html  trend.html  warnings.html
plugins/apple-a-day/docs/: sample-output.txt
plugins/apple-a-day/skills/use-apple-a-day/: SKILL.md
plugins/apple-a-day/tests/: test_checks.py  test_cli.py  test_config.py  test_log.py  test_models.py  test_vitals.py
plugins/canon/: AGENTS.md  README.md  pyproject.toml
plugins/canon/.claude-plugin/: plugin.json
plugins/canon/.codex-plugin/: plugin.json
plugins/canon/assets/: canon-image-prompt.md
plugins/canon/docs/: codex-plugin-improvement-plan.md
plugins/canon/skills/canon/: SKILL.md
plugins/canon/tests/: test_brand_safety.py  test_cli.py
plugins/cartwright/: .mcp.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
plugins/cartwright/.claude-plugin/: plugin.json
plugins/cartwright/.codex-plugin/: plugin.json
plugins/cartwright/cartwright/: __init__.py  cli.py  constants.py  execution.py  models.py  parsing.py  planning.py  receipts.py  server.py  storage.py
plugins/cartwright/docs/: data-integrations.md  seamless-shopping.md
plugins/cartwright/skills/personal-shopper/: SKILL.md
plugins/cartwright/tests/: test_cli.py  test_execution.py  test_mcp.py  test_parsing.py  test_planning.py  test_receipts.py
plugins/cept/: .eidos-plugin.json  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
plugins/cept/.claude-plugin/: plugin.json
plugins/cept/.codex-plugin/: plugin.json
plugins/cept/docs/: CEPTKEY.md
plugins/cept/eidos-plugin/cept/: playbook.md  plugin.yaml
plugins/cept/hud/: Package.swift
plugins/cept/hud/Sources/cept-hud/: main.swift
plugins/cept/registry/: storage.toml
plugins/cept/scripts/: cept-registry  cept_registry.py
plugins/cept/skills/use-cept/: SKILL.md
plugins/cept/src/cept/: __init__.py  adapters.py  cli.py  core.py  distiller.py  events.py  files.py  guides.py  hud_cli.py  hud_install.py  keyfile.py  keyfile_cli.py  locator.py  openrouter.py  packet.py  providers.py  redactor.py  repo_state.py  server.py
plugins/cept/tests/: test_adapters.py  test_cli.py  test_distiller.py  test_events.py  test_files.py  test_headline.py  test_hud_install.py  test_keyfile.py  test_keyfile_cli.py  test_locator.py  test_openrouter.py  test_providers.py  test_redactor.py  test_registry_script.py  test_version.py
plugins/clawdflare/: .eidos-plugin.json  .mcp.json  README.md
plugins/conduit/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
plugins/converge/: .eidos-plugin.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  playbook.md  plugin.yaml  verify.py
plugins/eidos/: README.md
plugins/eidos-mail/: .mcp.json
plugins/eidos-storemetheus/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
plugins/emux/: .mcp.json
plugins/felix/: CHANGELOG.md  CODEX-PLUGIN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
plugins/felix/.claude-plugin/: plugin.json
plugins/felix/skills/use-felix-cli/: SKILL.md
plugins/foreman/: .mcp.json  README.md  pyproject.toml
plugins/forge-forge/: .mcp.json  README.md  pyproject.toml
plugins/forge-forge/.claude-plugin/: plugin.json
plugins/forge-forge/.codex-plugin/: plugin.json
plugins/forge-forge/skills/use-forge-forge/: SKILL.md
plugins/forge-forge/tests/: test_cli.py
plugins/ike/: .mcp.json
plugins/kai/: AGENTS.md  README.md  pyproject.toml
plugins/kai/.claude-plugin/: plugin.json
plugins/kai/.codex-plugin/: plugin.json
plugins/kai/skills/use-kai-cli/: SKILL.md
plugins/kai/src/kai/: __init__.py  __main__.py  _paths.py  _usage.py
plugins/kai/src/kai/commands/: deploy.py  doctor.py  feedback.py  ideas.py  login.py  ops.py  slack.py
plugins/kai/src/kai/lib/: popup.py  secrets.py
plugins/kai/tests/: test_cli.py  test_login.py  test_slack.py
plugins/knox/: .mcp.json  LICENSE  README.md
plugins/lever/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
plugins/medical-school/: README.md
tests/: test_marketplace_publish.py  test_plugin_tester.py
tools/: marketplace_publish.py  test_plugins.py
(+211 files in other folders)
