[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canon"
version = "0.1.0"
description = "Canonical agent standards, verification gates, and repo contracts for durable software work."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
canon = "canon.cli:main"

[tool.setuptools.packages.find]
include = ["canon*"]
