[project]
name = "cartwright"
version = "0.2.2"
description = "Personal shopping assistant with local shopping-memory, parser, planning, and MCP tooling."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["shopping", "mcp", "shopping-assistant", "grocery", "recommendations"]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/eidos-agi"

[project.scripts]
cartwright = "cartwright.cli:main"
cartwright-mcp = "cartwright.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cartwright"]

[tool.pytest.ini_options]
testpaths = ["tests"]
