[project]
name = "cept"
version = "0.4.1"
description = "Proprioception for coding agents — slice recent Claude Code transcript, redact, send to a model gateway, return structured steering guidance."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Eidos AGI", email = "daniel@eidosagi.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mcp", "claude-code", "agent", "proprioception", "openrouter", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/eidos-agi/cept"
Repository = "https://github.com/eidos-agi/cept"
Issues = "https://github.com/eidos-agi/cept/issues"
Changelog = "https://github.com/eidos-agi/cept/blob/main/CHANGELOG.md"

[project.scripts]
cept = "cept.server:main"
cept-cli = "cept.cli:main"
cept-keyfile = "cept.keyfile_cli:main"
cept-hud-install = "cept.hud_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cept"]

# Ship the Swift HUD source inside the wheel so a `uvx --from cept` install
# can auto-build it on first `--emit hud` use. Without this, the wheel is
# Python-only and the HUD silently falls back to noop. See cept#7.
[tool.hatch.build.targets.wheel.force-include]
"hud" = "cept/_hud_source"
"docs/CEPTKEY.md" = "cept/guides/CEPTKEY.md"

[tool.hatch.build.targets.sdist]
include = [
    "src/cept",
    "hud",
    "docs",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in defaults — argparse pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "F401"]
