[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kai"
version = "0.1.0"
description = "Internal multitool for Daniel kai Vybhav — progressive-reveal launcher across the eidos-agi dev sprawl"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Shanklin", email = "daniel@eidosagi.com" },
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "slack-sdk>=3.27",
]

[project.scripts]
kai = "kai.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kai"]

[tool.hatch.version]
path = "src/kai/__init__.py"
